# CMake_QT_19_singleton

./: README.md  版本特性.txt
overlay/configuration/: rsss.language.cfg.xml
src/: Button_Material.qml  Button_Standard.qml  CMakeLists.txt  Config.qml  EngineReloaderWrapper.cpp  QuickViewReloaderWrapper.cpp  choose_qt_sdk.cmake  main.cpp  main.qml  main.qrc  qmldir
